src/test/ui/parser/issue-81827.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-81827.rs:11:27
   |
LL | fn r()->i{0|{#[cfg(r(0{]0
   |          -  - -   - -     ^
   |          |  | |   | |
   |          |  | |   | unclosed delimiter
   |          |  | |   unclosed delimiter
   |          |  | unclosed delimiter
   |          |  unclosed delimiter
   |          unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-81827.rs:11:27
   |
LL | fn r()->i{0|{#[cfg(r(0{]0
   |          -  - -   - -     ^
   |          |  | |   | |
   |          |  | |   | unclosed delimiter
   |          |  | |   unclosed delimiter
   |          |  | unclosed delimiter
   |          |  unclosed delimiter
   |          unclosed delimiter

error: expected one of `)` or `,`, found `{`
  --> $DIR/issue-81827.rs:11:23
   |
LL | fn r()->i{0|{#[cfg(r(0{]0
   |                       ^ expected one of `)` or `,`

error: aborting due to 3 previous errors

